   specify new output directory naming scheme (to guarantee unique output 
   directory for each run)
 - Add new error_email_address parameter to parse_XML, used by abort_pipeline
   Bash function to email the user when a pipeline is aborted. Also used for 
   batch system abort emails. Can be passe to civet_run with
   --error-email-address option

Version 1.5.0
-------------
Bug fixes
 - Fix crash for non-zero pbs_deljob return value in civet_cancel 
 - Fix crash when options file contains blank lines

Features
 - Initial <foreach> implementation
 - Delayed job execution (civet_run -d, --delay)
 - Can specify email list for batch notification (civet_run -e, --email-address)
 - Use pipeline tool names instead of name from tool definition file (allows
   multiple instances of same tool in pipeline to have unique names for job and
   file naming)

Version 1.4.2
-------------
Bug fixes
 - Fix crash in civet_status
 - Fix typo in civet_status output
 - Move NFS sync to end of job

Version 1.4.1
-------------
Bug fixes:
 - Fixed problem where tool exit_test_logic was not geting validated properly
 - Fix problem where civet_cancel was not removing queued jobs (only running and
   held jobs were canceled)
 - Use U.S. spelling of "canceled" (vs cancelled)

Features
 - Added optional tool mem attribute, specifies amount of memory in gigabyes
   that will be requested by the generated batch job 
 - Add some #PBS directives to generated batch script for documentation and to
   facilitate running steps manually during testing/debugging
 - Add --keep-temp (-t) option to civet_run. If passed, the delete temp files 
   job will not be submitted to clean up temporary pipeline files.
 - Add --hold option to civet_run. If passed, the holds on pipeline jobs will
   not be released by civet. The jobs will stay held until the user releases
   them.
 - Add civet_release script which will release all user holds on the jobs in a
   Civet pipeline (specified by pipeline log directory) 