@@ -22,6 +22,8 @@ Features
    Bash function to email the user when a pipeline is aborted. Also used for 
    batch system abort emails. Can be passe to civet_run with
    --error-email-address option
+ - Cleanup some Unicode characters from command line (problem when example
+   command lines are copy and pasted from Word Processors or email clients)
 
 Version 1.5.0
 -------------
